--- a/resources/new_squid.conf
+++ b/resources/new_squid.conf
@@ -1,9 +1,11 @@
 acl manager proto cache_object
 acl localhost src 127.0.0.1/32 ::1
 
-# init networks
 acl to_localhost dst 127.0.0.0/8 0.0.0.0/32 ::1
-acl networks src 192.168.0.0/24 10.11.12.0/24
+
+# init networks
+acl networks src 192.168.0.0/24
+acl networks src 10.11.12.0/24
 # end networks
 
 # init safeports
@@ -23,10 +25,12 @@ acl Safe_ports port 777		# multiling http
 acl CONNECT method CONNECT
 
 # init httpaccess
-http_access allow manager localhost
+http_access allow manager
+http_access allow localhost
 http_access deny manager
 http_access deny !Safe_ports
-http_access deny CONNECT !SSL_ports
+http_access deny CONNECT
+http_access deny !SSL_ports
 http_access allow networks
 http_access allow localhost
 http_access deny all
